# rvrs

./: .gitignore  ChangeLog  INSTALL  Makefile  README.md  rvrs.mk  rvrs.project  rvrs.txt  rvrs.workspace  stas.mk  stas.txt
config/: merge_2wavs.sh  rvrs.conf  stas.conf  stas_service.sh
include/: CallExecutor.h  CallReceiver.h  CallSignal.h  DBHandler.h  DBHandler_ODBC.h  DBManager.h  DivSpkManager.h  FileHandler.h  HAManager.h  ItfOdbcPool.h  Notifier.h  RT2DB.h  STT2DB.h  STT2DB_ODBC.h  STT2File.h  STTDeliver.h  Schd4DB.h  Scheduler.h  VASDivSpeaker.h  VDCManager.h  VDClient.h  VFCManager.h  VFClient.h  VRCManager.h  VRClient.h  VRClientMT.h  WorkTracer.h  rvrs.h  stas.h
lib/: Makefile.am  configuration.cpp
src/: CallReceiver.cpp  Makefile.am  VFCManager.cpp  stas.cpp
src/rvrs/: CallExecutor.cpp  CallReceiver.cpp  CallSignal.cpp  DBManager.cpp  HAManager.cpp  RT2DB.cpp  STTDeliver.cpp  SmartVRS.cpp  VDCManager.cpp  VDClient.cpp  VRCManager.cpp  VRClient.cpp  WorkTracer.cpp  rvrs.cpp
src/stas/: CallExecutor.cpp  CallReceiver.cpp  CallSignal.cpp  DBHandler.cpp  DBHandler_ODBC.cpp  DivSpkManager.cpp  FileHandler.cpp  HAManager.cpp  ItfOdbcPool.cpp  Makefile  Makefile_ODBC  Makefile_ZDB  Makefile_zdb  Notifier.cpp  STT2DB.cpp  STT2DB_ODBC.cpp  STT2File.cpp  STTDeliver.cpp  Schd4DB.cpp  Scheduler.cpp  VASDivSpeaker.cpp  VDCManager.cpp  VDClient.cpp  VFCManager.cpp  VFClient.cpp  VRCManager.cpp  VRClient.cpp  VRClientMT.cpp  stas.cpp  stdafx.cpp
